--- a/index.html
+++ b/index.html
@@ -386,5 +386,130 @@
         </div>
       </aside>
     </main>
+    <footer style="margin-top: 50px">
+      <div class="footer1">
+        <span> World </span>
+        <span> > </span>
+        <span> Asia </span>
+        <span> > </span>
+        <span> Nepal </span>
+        <span> > </span>
+        <span> Bagmati </span>
+        <span> > </span>
+        <span> Kaathmandu </span>
+      </div>
+      <div class="footer2">
+        <span><b> Weather Near Kathmandu: </b></span>
+        <span> Bhaktapur,Bagmati;</span>
+        <span> Kirtipur,Bagmati; </span>
+        <span> Patan,Bagmati </span>
+      </div>
+      <div class="footer3" style="line-height: 35px">
+        <div>
+          <h5>COMPANY</h5>
+          <a href="/" style="font-size: 12px; color: black"
+            >Proven Superior Accuracy</a
+          ><br />
+          <a href="/" style="font-size: 12px; color: black">About AccuWeather</a
+          ><br />
+          <a href="/" style="font-size: 12px; color: black"
+            >Digital Advertising</a
+          ><br />
+          <a href="/" style="font-size: 12px; color: black">Careers</a><br />
+          <a href="/" style="font-size: 12px; color: black">Press</a><br />
+          <a href="/" style="font-size: 12px; color: black">Contact Us</a><br />
+        </div>
+        <div>
+          <h5>PRODUCTS & SERVICES</h5>
+          <a href="/" style="font-size: 12px; color: black">For Business</a
+          ><br />
+          <a href="/" style="font-size: 12px; color: black">For Partners</a
+          ><br />
+          <a href="/" style="font-size: 12px; color: black">For Advertising</a
+          ><br />
+          <a href="/" style="font-size: 12px; color: black">AccuWeather APIs</a
+          ><br />
+          <a href="/" style="font-size: 12px; color: black"
+            >AccuWeather Connect</a
+          ><br />
+          <a href="/" style="font-size: 12px; color: black"
+            >RealFeel and RealFeel Shade</a
+          ><br />
+        </div>
+        <div>
+          <h5>APPS & DOWNLOADS</h5>
+          <a href="/" style="font-size: 12px; color: black">iPhone App</a><br />
+          <a href="/" style="font-size: 12px; color: black">Android App</a
+          ><br />
+          <a href="/" style="font-size: 12px; color: black"
+            >See all Apps & Downloads</a
+          ><br />
+          <h5 style="margin-top: -1px">SUBSCRIPTION SERVICES</h5>
+          <a href="/" style="font-size: 12px; color: black"
+            >AccuWeather Premium</a
+          ><br />
+          <a href="/" style="font-size: 12px; color: black"
+            >AccuWeather Professional</a
+          ><br />
+        </div>
+        <div>
+          <h5>MORE</h5>
+          <a href="/" style="font-size: 12px; color: black">AccuWeather Ready</a
+          ><br />
+          <a href="/" style="font-size: 12px; color: black">Business</a><br />
+          <a href="/" style="font-size: 12px; color: black">Health</a><br />
+          <a href="/" style="font-size: 12px; color: black">Hurricane</a><br />
+          <a href="/" style="font-size: 12px; color: black"
+            >Space and Astronomy</a
+          ><br />
+          <a href="/" style="font-size: 12px; color: black">Sports</a><br />
+        </div>
+      </div>
+      <div class="social">
+        <a href="/"
+          ><img
+            src="./assets/icons/facebook-v1.svg"
+            width="30px;"
+            height="30px;"
+        /></a>
+        <a href="/"
+          ><img src="./assets/icons/twitter.svg" width="30px;" height="30px;"
+        /></a>
+      </div>
+      <div class="footer4">
+        <hr />
+        <span
+          >&#169; 2024 AccuWeather, Inc. "AccuWeather" and sun design are
+          registered trademarks of AccuWeather, Inc. All Rights Reserved.</span
+        >
+        <br />
+        <div style="display: flex; margin-left: 35%; margin-top: 10px">
+          <a
+            ><div style="color: grey; font-weight: bold; padding-right: 5px">
+              Terms of Use
+            </div></a
+          >
+          <div>|</div>
+          <a
+            ><div
+              style="
+                color: grey;
+                font-weight: bold;
+                padding-right: 5px;
+                padding-left: 5px;
+              "
+            >
+              Privacy Policy
+            </div></a
+          >
+          <div>|</div>
+          <a
+            ><div style="color: grey; font-weight: bold; padding-left: 5px">
+              Cookie Policy
+            </div></a
+          >
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
